# LangBench

./: .gitignore  README.md
file-server/: files-1k-rel.txt
file-server/client/: Makefile  client.cpp  read.cpp
file-server/cpp/: Makefile  file_server.cpp  file_server_empty.cpp  file_server_ptr.cpp  file_server_sendfile.cpp
file-server/go/: Makefile
file-server/go/default/: file_server.go
file-server/go/sendfile/: file_server_sendfile.go
file-server/java/: FileServer.java
file-server/js/: file_server.js  file_server_workers.js
file-server/python/: file_server.py
graph/cpp/: CMakeLists.txt  Makefile  README.md  graph.cpp  graph.h  make.sh
graph/go/: Makefile
graph/go/iterative/: graph_iterative.go
graph/go/recursive/: graph_recursive.go
graph/java/: GraphIterative.java  GraphRecursive.java  Makefile
graph/js/: README.md  binding.gyp  graph-map.js  graph_iterative.js  graph_recursive.js  rlimit.cpp
graph/python/: graph_iterative.py  graph_recursive.py
key-value/cpp/: Makefile  hashmap.cpp  hashmap.h  hashmap2.cpp  hashmap_set.gdb  key_value.cpp  micro_hashmap.cpp  micro_hashmap.h
key-value/go/: Makefile  hashmap.go  key_value.go
key-value/java/: HashMap.java  KeyValue.java  MicroHashMap.java  hashmap_set.gdb
key-value/js/: hashmap.js  key_value.js
key-value/python/: hashmap.py  hashmap_concurrent.py  key_value.py  key_value_concurrent.py
log-parser/: hadoop-24hrs-HDD-8k.txt  hadoop-24hrs-MFS-7k.txt  hadoop-24hrs-MFS-8k.txt  hadoop-24hrs-SSD-8k.txt  indexed.txt  regexes.txt
log-parser/cpp/: CMakeLists.txt  Makefile  log_parser.cpp  log_parser.h  log_parser_stringptr.cpp  log_parser_stringptr.h  make.sh
log-parser/go/: Makefile  log_parser.go
log-parser/java/: LogParser.java  Makefile
log-parser/js/: b2.sh  cerave.sh  chan.pl  log_parser.js  log_parser_st.js  lp-debug.js  lp-st.js
log-parser/python/: log_parser.py
scripts/: Makefile  data_parser.py  launch.py  obs.c  print_stats.py  requirements.txt  single_figure.py  table2.sh  table3-cpython.sh  table3-nodejs.sh  table3-openjdk.sh  tester.py
scripts/clear_mem/: Makefile  README.md  clear_mem.c  clear_mem.sh
sort/cpp/: Makefile  sort.c
sort/go/: Makefile  sort.go
sort/java/: Sort.java  swap.gdb
sort/js/: sort.js
sort/python/: sort.py
sudoku/: input-64.txt  scraper.py
sudoku/cpp/: Makefile  partial_verify.gdb  partial_verify_noinline.gdb  partial_verify_o3.gdb  sudoku.cpp  sudoku_virtual.cpp
sudoku/go/: Makefile  sudoku.go
sudoku/java/: README.md  Sudoku.java  SudokuObjects.java  SudokuPartialVerifyTimed.java  partial_verify.gdb
sudoku/js/: bytecode_histogram.py  hrtime.js  keyedloadic.gdb  partial_verify.gdb  solve.gdb  sudoku-partial-verify-time.js  sudoku.js  sudoku2.js  sudoku3.js
sudoku/python/: jithook.py  pypysudoku.py  sudoku.py  sudoku2.py  sudoku_opt.py  sudoku_profile.py
